# math-tool-package

./: Makefile  README.md  main.py  pyproject.toml
src/lib/: calculator.py  statistics.py
tests/: test_calculatory.py  test_statistics.py
